--- a/Views/Notifications/Edit.cshtml
+++ b/Views/Notifications/Edit.cshtml
@@ -3,61 +3,68 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
-<h1>Edit</h1>
-
-<h4>Notification</h4>
-<hr />
+<br /><br /><br />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+    <div class="col-2"></div>
+    <div class="col">
+        <div class="card">
+            <div class="card-header bg-primary">
+                <h3 class="card-title">Notification</h3>
             </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <form asp-action="Edit">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <input type="hidden" asp-for="Id" />
+                            <div class="form-group">
+                                <label asp-for="Name" class="control-label"></label>
+                                <input asp-for="Name" class="form-control" />
+                                <span asp-validation-for="Name" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Description" class="control-label"></label>
+                                <input asp-for="Description" class="form-control" />
+                                <span asp-validation-for="Description" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Created" class="control-label"></label>
+                                <input asp-for="Created" class="form-control" />
+                                <span asp-validation-for="Created" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="SenderId" class="control-label"></label>
+                                <select asp-for="SenderId" class="form-control" asp-items="ViewBag.SenderId"></select>
+                                <span asp-validation-for="SenderId" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="RecipientId" class="control-label"></label>
+                                <select asp-for="RecipientId" class="form-control" asp-items="ViewBag.RecipientId"></select>
+                                <span asp-validation-for="RecipientId" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="TicketId" class="control-label"></label>
+                                <select asp-for="TicketId" class="form-control" asp-items="ViewBag.TicketId"></select>
+                                <span asp-validation-for="TicketId" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Save" class="btn btn-primary" />
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <div>
+                    <a asp-action="Index">Back to List</a>
+                </div>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsViewed" /> @Html.DisplayNameFor(model => model.IsViewed)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="Created" class="control-label"></label>
-                <input asp-for="Created" class="form-control" />
-                <span asp-validation-for="Created" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SenderId" class="control-label"></label>
-                <select asp-for="SenderId" class="form-control" asp-items="ViewBag.SenderId"></select>
-                <span asp-validation-for="SenderId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RecipientId" class="control-label"></label>
-                <select asp-for="RecipientId" class="form-control" asp-items="ViewBag.RecipientId"></select>
-                <span asp-validation-for="RecipientId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TicketId" class="control-label"></label>
-                <select asp-for="TicketId" class="form-control" asp-items="ViewBag.TicketId"></select>
-                <span asp-validation-for="TicketId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
+    <div class="col-2"></div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
